// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list descending orderBy + first + offset 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Brandi",
            "id": "105",
            "lastname": "Grimes",
            "username": "brandi646",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Joe",
            "id": "104",
            "lastname": "Ratke",
            "username": "joe154",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Ella",
            "id": "103",
            "lastname": "Roberts",
            "username": "ella377",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjEwMyJdXX0=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjEwNSJdXX0=",
      },
      "resultCount": 3,
      "totalCount": 110,
    },
  },
}
`;

exports[`list descending orderBy + first 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Krystel",
            "id": "110",
            "lastname": "Bauch",
            "username": "krystel170",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Muriel",
            "id": "109",
            "lastname": "Howe",
            "username": "muriel707",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Tianna",
            "id": "108",
            "lastname": "Kulas",
            "username": "tianna226",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjEwOCJdXX0=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjExMCJdXX0=",
      },
      "resultCount": 3,
      "totalCount": 110,
    },
  },
}
`;

exports[`list descending orderBy + last + offset 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Edward",
            "id": "8",
            "lastname": "Dach",
            "username": "edward969",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Autumn",
            "id": "7",
            "lastname": "Ullrich",
            "username": "autumn520",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Jeremy",
            "id": "6",
            "lastname": "Larkin",
            "username": "jeremy386",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjYiXV19",
        "hasNextPage": false,
        "hasPreviousPage": true,
        "startCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjgiXV19",
      },
      "resultCount": 3,
      "totalCount": 110,
    },
  },
}
`;

exports[`list descending orderBy + last 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Fleta",
            "id": "3",
            "lastname": "Williamson",
            "username": "fleta342",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Anya",
            "id": "2",
            "lastname": "Conn",
            "username": "anya543",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Annabel",
            "id": "1",
            "lastname": "Bergstrom",
            "username": "annabel711",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjEiXV19",
        "hasNextPage": false,
        "hasPreviousPage": true,
        "startCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjMiXV19",
      },
      "resultCount": 3,
      "totalCount": 110,
    },
  },
}
`;

exports[`list descending orderBy + offset 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Brandi",
            "id": "105",
            "lastname": "Grimes",
            "username": "brandi646",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Joe",
            "id": "104",
            "lastname": "Ratke",
            "username": "joe154",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Ella",
            "id": "103",
            "lastname": "Roberts",
            "username": "ella377",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Garfield",
            "id": "102",
            "lastname": "Langosh",
            "username": "garfield347",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Isidro",
            "id": "101",
            "lastname": "Heaney",
            "username": "isidro418",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Vernice",
            "id": "100",
            "lastname": "Sipes",
            "username": "vernice306",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Antonina",
            "id": "99",
            "lastname": "Lesch",
            "username": "antonina448",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Elza",
            "id": "98",
            "lastname": "Gorczany",
            "username": "elza510",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Xander",
            "id": "97",
            "lastname": "Sipes",
            "username": "xander627",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Faustino",
            "id": "96",
            "lastname": "Bartell",
            "username": "faustino795",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjk2Il1dfQ==",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjEwNSJdXX0=",
      },
      "resultCount": 10,
      "totalCount": 110,
    },
  },
}
`;

exports[`list descending orderBy 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Krystel",
            "id": "110",
            "lastname": "Bauch",
            "username": "krystel170",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Muriel",
            "id": "109",
            "lastname": "Howe",
            "username": "muriel707",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Tianna",
            "id": "108",
            "lastname": "Kulas",
            "username": "tianna226",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Leanna",
            "id": "107",
            "lastname": "Leuschke",
            "username": "leanna128",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Stan",
            "id": "106",
            "lastname": "VonRueden",
            "username": "stan321",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Brandi",
            "id": "105",
            "lastname": "Grimes",
            "username": "brandi646",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Joe",
            "id": "104",
            "lastname": "Ratke",
            "username": "joe154",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Ella",
            "id": "103",
            "lastname": "Roberts",
            "username": "ella377",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Garfield",
            "id": "102",
            "lastname": "Langosh",
            "username": "garfield347",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Isidro",
            "id": "101",
            "lastname": "Heaney",
            "username": "isidro418",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjEwMSJdXX0=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjExMCJdXX0=",
      },
      "resultCount": 10,
      "totalCount": 110,
    },
  },
}
`;

exports[`list filter 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Hazel",
            "id": "11",
            "lastname": "King",
            "username": "hazel528",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjExIl1dfQ==",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjExIl1dfQ==",
      },
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`list filter variants $contains + $not_contains 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "71",
            "isPrivate": false,
            "metaData": Object {
              "description": "Consequatur facilis",
              "externalLinks": null,
            },
            "mods": Array [
              "Martha",
              "Tom",
            ],
            "name": "Voluptas dolor",
            "owner": "71",
            "updatedBy": "71",
            "vip": "69",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCIzNCJdXX0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCIzNCJdXX0=",
      },
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`list filter variants $contains + $starts_with + $ends_with 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "27",
            "isPrivate": false,
            "metaData": Object {
              "description": null,
              "externalLinks": Object {
                "web": "https://example.com",
              },
            },
            "mods": null,
            "name": "Enim dolore",
            "owner": "27",
            "updatedBy": "27",
            "vip": "17",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCI0MSJdXX0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCI0MSJdXX0=",
      },
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`list filter variants $contains 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "59",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Illo sit quia",
            "owner": "59",
            "updatedBy": "59",
            "vip": "21",
          },
        },
        Object {
          "node": Object {
            "createdBy": "62",
            "isPrivate": false,
            "metaData": Object {
              "description": "Qui fnecessitatibus",
              "externalLinks": null,
            },
            "mods": null,
            "name": "Quia sapiente",
            "owner": "62",
            "updatedBy": "62",
            "vip": "93",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCIyMSJdXX0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCI4Il1dfQ==",
      },
      "resultCount": 2,
      "totalCount": 2,
    },
  },
}
`;

exports[`list filter variants $ends_with 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "42",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Ut et",
            "owner": "42",
            "updatedBy": "42",
            "vip": "102",
          },
        },
        Object {
          "node": Object {
            "createdBy": "24",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Est et",
            "owner": "24",
            "updatedBy": "24",
            "vip": "55",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCIxNyJdXX0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCI2Il1dfQ==",
      },
      "resultCount": 2,
      "totalCount": 2,
    },
  },
}
`;

exports[`list filter variants $gt 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "41",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Nobis totam",
            "owner": "41",
            "updatedBy": "41",
            "vip": "35",
          },
        },
        Object {
          "node": Object {
            "createdBy": "26",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Odit qui",
            "owner": "26",
            "updatedBy": "26",
            "vip": "101",
          },
        },
        Object {
          "node": Object {
            "createdBy": "84",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Sed assumenda repellendus",
            "owner": "84",
            "updatedBy": "84",
            "vip": "16",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCI1MCJdXX0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCI0OCJdXX0=",
      },
      "resultCount": 3,
      "totalCount": 3,
    },
  },
}
`;

exports[`list filter variants $gte 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "23",
            "isPrivate": false,
            "metaData": null,
            "mods": Array [
              "Phil",
              "Jane",
              "Jack",
            ],
            "name": "Accusamus sequi",
            "owner": "23",
            "updatedBy": "23",
            "vip": "32",
          },
        },
        Object {
          "node": Object {
            "createdBy": "41",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Nobis totam",
            "owner": "41",
            "updatedBy": "41",
            "vip": "35",
          },
        },
        Object {
          "node": Object {
            "createdBy": "26",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Odit qui",
            "owner": "26",
            "updatedBy": "26",
            "vip": "101",
          },
        },
        Object {
          "node": Object {
            "createdBy": "84",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Sed assumenda repellendus",
            "owner": "84",
            "updatedBy": "84",
            "vip": "16",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCI1MCJdXX0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCI0NyJdXX0=",
      },
      "resultCount": 4,
      "totalCount": 4,
    },
  },
}
`;

exports[`list filter variants $in 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "42",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Ut et",
            "owner": "42",
            "updatedBy": "42",
            "vip": "102",
          },
        },
        Object {
          "node": Object {
            "createdBy": "48",
            "isPrivate": false,
            "metaData": null,
            "mods": Array [
              "Jane",
              "Josh",
              "Jack",
              "Bart",
            ],
            "name": "Rerum ad",
            "owner": "48",
            "updatedBy": "48",
            "vip": "71",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCIxOSJdXX0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCI2Il1dfQ==",
      },
      "resultCount": 2,
      "totalCount": 2,
    },
  },
}
`;

exports[`list filter variants $includes + $notIncludes: list 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "48",
            "isPrivate": false,
            "metaData": null,
            "mods": Array [
              "Jane",
              "Josh",
              "Jack",
              "Bart",
            ],
            "name": "Rerum ad",
            "owner": "48",
            "updatedBy": "48",
            "vip": "71",
          },
        },
        Object {
          "node": Object {
            "createdBy": "37",
            "isPrivate": true,
            "metaData": null,
            "mods": Array [
              "Ben",
              "Mark",
              "Jane",
            ],
            "name": "Quo ut rerum",
            "owner": "37",
            "updatedBy": "37",
            "vip": "7",
          },
        },
        Object {
          "node": Object {
            "createdBy": "23",
            "isPrivate": false,
            "metaData": null,
            "mods": Array [
              "Phil",
              "Jane",
              "Jack",
            ],
            "name": "Accusamus sequi",
            "owner": "23",
            "updatedBy": "23",
            "vip": "32",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCI0NyJdXX0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCIxOSJdXX0=",
      },
      "resultCount": 3,
      "totalCount": 3,
    },
  },
}
`;

exports[`list filter variants $includes + $notIncludes: object 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "27",
            "isPrivate": false,
            "metaData": Object {
              "description": null,
              "externalLinks": Object {
                "web": "https://example.com",
              },
            },
            "mods": null,
            "name": "Enim dolore",
            "owner": "27",
            "updatedBy": "27",
            "vip": "17",
          },
        },
        Object {
          "node": Object {
            "createdBy": "61",
            "isPrivate": true,
            "metaData": Object {
              "description": null,
              "externalLinks": Object {
                "web": "https://example.com",
              },
            },
            "mods": Array [
              "John",
              "Jack",
            ],
            "name": "Sapiente laborum non",
            "owner": "61",
            "updatedBy": "61",
            "vip": "70",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCI0MyJdXX0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCI0MSJdXX0=",
      },
      "resultCount": 2,
      "totalCount": 2,
    },
  },
}
`;

exports[`list filter variants $includes: list 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "42",
            "isPrivate": false,
            "metaData": Object {
              "description": "Fuga facilis",
              "externalLinks": null,
            },
            "mods": Array [
              "Jane",
              "Martha",
              "Tom",
            ],
            "name": "Delectus qui maxime",
            "owner": "42",
            "updatedBy": "42",
            "vip": "10",
          },
        },
        Object {
          "node": Object {
            "createdBy": "84",
            "isPrivate": false,
            "metaData": null,
            "mods": Array [
              "John",
              "Tom",
              "Jane",
            ],
            "name": "Suscipit aut cum",
            "owner": "84",
            "updatedBy": "84",
            "vip": "89",
          },
        },
        Object {
          "node": Object {
            "createdBy": "48",
            "isPrivate": false,
            "metaData": null,
            "mods": Array [
              "Jane",
              "Josh",
              "Jack",
              "Bart",
            ],
            "name": "Rerum ad",
            "owner": "48",
            "updatedBy": "48",
            "vip": "71",
          },
        },
        Object {
          "node": Object {
            "createdBy": "37",
            "isPrivate": true,
            "metaData": null,
            "mods": Array [
              "Ben",
              "Mark",
              "Jane",
            ],
            "name": "Quo ut rerum",
            "owner": "37",
            "updatedBy": "37",
            "vip": "7",
          },
        },
        Object {
          "node": Object {
            "createdBy": "23",
            "isPrivate": false,
            "metaData": null,
            "mods": Array [
              "Phil",
              "Jane",
              "Jack",
            ],
            "name": "Accusamus sequi",
            "owner": "23",
            "updatedBy": "23",
            "vip": "32",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCI0NyJdXX0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCI0Il1dfQ==",
      },
      "resultCount": 5,
      "totalCount": 5,
    },
  },
}
`;

exports[`list filter variants $includes: object 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "42",
            "isPrivate": false,
            "metaData": Object {
              "description": "Fuga facilis",
              "externalLinks": null,
            },
            "mods": Array [
              "Jane",
              "Martha",
              "Tom",
            ],
            "name": "Delectus qui maxime",
            "owner": "42",
            "updatedBy": "42",
            "vip": "10",
          },
        },
        Object {
          "node": Object {
            "createdBy": "62",
            "isPrivate": false,
            "metaData": Object {
              "description": "Qui fnecessitatibus",
              "externalLinks": null,
            },
            "mods": null,
            "name": "Quia sapiente",
            "owner": "62",
            "updatedBy": "62",
            "vip": "93",
          },
        },
        Object {
          "node": Object {
            "createdBy": "13",
            "isPrivate": false,
            "metaData": Object {
              "description": "Necessitatibus facilis blanditiis",
              "externalLinks": null,
            },
            "mods": Array [
              "Bart",
            ],
            "name": "Deleniti esse itaque",
            "owner": "13",
            "updatedBy": "13",
            "vip": "48",
          },
        },
        Object {
          "node": Object {
            "createdBy": "71",
            "isPrivate": false,
            "metaData": Object {
              "description": "Consequatur facilis",
              "externalLinks": null,
            },
            "mods": Array [
              "Martha",
              "Tom",
            ],
            "name": "Voluptas dolor",
            "owner": "71",
            "updatedBy": "71",
            "vip": "69",
          },
        },
        Object {
          "node": Object {
            "createdBy": "37",
            "isPrivate": false,
            "metaData": Object {
              "description": "Est voluptates",
              "externalLinks": Object {
                "web": "https://example.com",
              },
            },
            "mods": null,
            "name": "Nesciunt nihil enim",
            "owner": "37",
            "updatedBy": "37",
            "vip": "52",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCIzOCJdXX0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCI0Il1dfQ==",
      },
      "resultCount": 5,
      "totalCount": 5,
    },
  },
}
`;

exports[`list filter variants $isNull: list 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "62",
            "isPrivate": false,
            "metaData": Object {
              "description": "Qui fnecessitatibus",
              "externalLinks": null,
            },
            "mods": null,
            "name": "Quia sapiente",
            "owner": "62",
            "updatedBy": "62",
            "vip": "93",
          },
        },
        Object {
          "node": Object {
            "createdBy": "37",
            "isPrivate": false,
            "metaData": Object {
              "description": "Est voluptates",
              "externalLinks": Object {
                "web": "https://example.com",
              },
            },
            "mods": null,
            "name": "Nesciunt nihil enim",
            "owner": "37",
            "updatedBy": "37",
            "vip": "52",
          },
        },
        Object {
          "node": Object {
            "createdBy": "27",
            "isPrivate": false,
            "metaData": Object {
              "description": null,
              "externalLinks": Object {
                "web": "https://example.com",
              },
            },
            "mods": null,
            "name": "Enim dolore",
            "owner": "27",
            "updatedBy": "27",
            "vip": "17",
          },
        },
        Object {
          "node": Object {
            "createdBy": "85",
            "isPrivate": true,
            "metaData": Object {
              "description": null,
              "externalLinks": null,
            },
            "mods": null,
            "name": "Sed necessitatibus facilis",
            "owner": "85",
            "updatedBy": "85",
            "vip": "74",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCI0NSJdXX0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCIyMSJdXX0=",
      },
      "resultCount": 4,
      "totalCount": 4,
    },
  },
}
`;

exports[`list filter variants $isNull: object 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "84",
            "isPrivate": false,
            "metaData": null,
            "mods": Array [
              "John",
              "Tom",
              "Jane",
            ],
            "name": "Suscipit aut cum",
            "owner": "84",
            "updatedBy": "84",
            "vip": "89",
          },
        },
        Object {
          "node": Object {
            "createdBy": "48",
            "isPrivate": false,
            "metaData": null,
            "mods": Array [
              "Jane",
              "Josh",
              "Jack",
              "Bart",
            ],
            "name": "Rerum ad",
            "owner": "48",
            "updatedBy": "48",
            "vip": "71",
          },
        },
        Object {
          "node": Object {
            "createdBy": "38",
            "isPrivate": false,
            "metaData": null,
            "mods": Array [],
            "name": "Libero similique vitae",
            "owner": "38",
            "updatedBy": "38",
            "vip": "91",
          },
        },
        Object {
          "node": Object {
            "createdBy": "37",
            "isPrivate": true,
            "metaData": null,
            "mods": Array [
              "Ben",
              "Mark",
              "Jane",
            ],
            "name": "Quo ut rerum",
            "owner": "37",
            "updatedBy": "37",
            "vip": "7",
          },
        },
        Object {
          "node": Object {
            "createdBy": "23",
            "isPrivate": false,
            "metaData": null,
            "mods": Array [
              "Phil",
              "Jane",
              "Jack",
            ],
            "name": "Accusamus sequi",
            "owner": "23",
            "updatedBy": "23",
            "vip": "32",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCI0NyJdXX0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCIxMyJdXX0=",
      },
      "resultCount": 5,
      "totalCount": 5,
    },
  },
}
`;

exports[`list filter variants $lt 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "37",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Reiciendis quaerat",
            "owner": "37",
            "updatedBy": "37",
            "vip": "103",
          },
        },
        Object {
          "node": Object {
            "createdBy": "46",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Et eum",
            "owner": "46",
            "updatedBy": "46",
            "vip": "62",
          },
        },
        Object {
          "node": Object {
            "createdBy": "79",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Occaecati adipisci vel",
            "owner": "79",
            "updatedBy": "79",
            "vip": "50",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCIzIl1dfQ==",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCIxIl1dfQ==",
      },
      "resultCount": 3,
      "totalCount": 3,
    },
  },
}
`;

exports[`list filter variants $lte 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "37",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Reiciendis quaerat",
            "owner": "37",
            "updatedBy": "37",
            "vip": "103",
          },
        },
        Object {
          "node": Object {
            "createdBy": "46",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Et eum",
            "owner": "46",
            "updatedBy": "46",
            "vip": "62",
          },
        },
        Object {
          "node": Object {
            "createdBy": "79",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Occaecati adipisci vel",
            "owner": "79",
            "updatedBy": "79",
            "vip": "50",
          },
        },
        Object {
          "node": Object {
            "createdBy": "42",
            "isPrivate": false,
            "metaData": Object {
              "description": "Fuga facilis",
              "externalLinks": null,
            },
            "mods": Array [
              "Jane",
              "Martha",
              "Tom",
            ],
            "name": "Delectus qui maxime",
            "owner": "42",
            "updatedBy": "42",
            "vip": "10",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCI0Il1dfQ==",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCIxIl1dfQ==",
      },
      "resultCount": 4,
      "totalCount": 4,
    },
  },
}
`;

exports[`list filter variants $ne (null) 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "37",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Reiciendis quaerat",
            "owner": "37",
            "updatedBy": "37",
            "vip": "103",
          },
        },
        Object {
          "node": Object {
            "createdBy": "46",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Et eum",
            "owner": "46",
            "updatedBy": "46",
            "vip": "62",
          },
        },
        Object {
          "node": Object {
            "createdBy": "79",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Occaecati adipisci vel",
            "owner": "79",
            "updatedBy": "79",
            "vip": "50",
          },
        },
        Object {
          "node": Object {
            "createdBy": "42",
            "isPrivate": false,
            "metaData": Object {
              "description": "Fuga facilis",
              "externalLinks": null,
            },
            "mods": Array [
              "Jane",
              "Martha",
              "Tom",
            ],
            "name": "Delectus qui maxime",
            "owner": "42",
            "updatedBy": "42",
            "vip": "10",
          },
        },
        Object {
          "node": Object {
            "createdBy": "55",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Cumque impedit est",
            "owner": "55",
            "updatedBy": "55",
            "vip": "4",
          },
        },
        Object {
          "node": Object {
            "createdBy": "42",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Ut et",
            "owner": "42",
            "updatedBy": "42",
            "vip": "102",
          },
        },
        Object {
          "node": Object {
            "createdBy": "72",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Vel ullam",
            "owner": "72",
            "updatedBy": "72",
            "vip": "9",
          },
        },
        Object {
          "node": Object {
            "createdBy": "59",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Illo sit quia",
            "owner": "59",
            "updatedBy": "59",
            "vip": "21",
          },
        },
        Object {
          "node": Object {
            "createdBy": "52",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Veritatis nihil cum",
            "owner": "52",
            "updatedBy": "52",
            "vip": "61",
          },
        },
        Object {
          "node": Object {
            "createdBy": "71",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Sit aut",
            "owner": "71",
            "updatedBy": "71",
            "vip": "73",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCIxMCJdXX0=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCIxIl1dfQ==",
      },
      "resultCount": 10,
      "totalCount": 50,
    },
  },
}
`;

exports[`list filter variants $ne 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "46",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Et eum",
            "owner": "46",
            "updatedBy": "46",
            "vip": "62",
          },
        },
        Object {
          "node": Object {
            "createdBy": "79",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Occaecati adipisci vel",
            "owner": "79",
            "updatedBy": "79",
            "vip": "50",
          },
        },
        Object {
          "node": Object {
            "createdBy": "42",
            "isPrivate": false,
            "metaData": Object {
              "description": "Fuga facilis",
              "externalLinks": null,
            },
            "mods": Array [
              "Jane",
              "Martha",
              "Tom",
            ],
            "name": "Delectus qui maxime",
            "owner": "42",
            "updatedBy": "42",
            "vip": "10",
          },
        },
        Object {
          "node": Object {
            "createdBy": "55",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Cumque impedit est",
            "owner": "55",
            "updatedBy": "55",
            "vip": "4",
          },
        },
        Object {
          "node": Object {
            "createdBy": "42",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Ut et",
            "owner": "42",
            "updatedBy": "42",
            "vip": "102",
          },
        },
        Object {
          "node": Object {
            "createdBy": "72",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Vel ullam",
            "owner": "72",
            "updatedBy": "72",
            "vip": "9",
          },
        },
        Object {
          "node": Object {
            "createdBy": "59",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Illo sit quia",
            "owner": "59",
            "updatedBy": "59",
            "vip": "21",
          },
        },
        Object {
          "node": Object {
            "createdBy": "52",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Veritatis nihil cum",
            "owner": "52",
            "updatedBy": "52",
            "vip": "61",
          },
        },
        Object {
          "node": Object {
            "createdBy": "71",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Sit aut",
            "owner": "71",
            "updatedBy": "71",
            "vip": "73",
          },
        },
        Object {
          "node": Object {
            "createdBy": "81",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Aut incidunt consequatur",
            "owner": "81",
            "updatedBy": "81",
            "vip": "12",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCIxMSJdXX0=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCIyIl1dfQ==",
      },
      "resultCount": 10,
      "totalCount": 49,
    },
  },
}
`;

exports[`list filter variants $not_contains + $not_starts_with + $not_ends_with 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "46",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Et eum",
            "owner": "46",
            "updatedBy": "46",
            "vip": "62",
          },
        },
        Object {
          "node": Object {
            "createdBy": "42",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Ut et",
            "owner": "42",
            "updatedBy": "42",
            "vip": "102",
          },
        },
        Object {
          "node": Object {
            "createdBy": "72",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Vel ullam",
            "owner": "72",
            "updatedBy": "72",
            "vip": "9",
          },
        },
        Object {
          "node": Object {
            "createdBy": "23",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Tenetur porro",
            "owner": "23",
            "updatedBy": "23",
            "vip": "83",
          },
        },
        Object {
          "node": Object {
            "createdBy": "24",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Est et",
            "owner": "24",
            "updatedBy": "24",
            "vip": "55",
          },
        },
        Object {
          "node": Object {
            "createdBy": "10",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Sunt quo",
            "owner": "10",
            "updatedBy": "10",
            "vip": "59",
          },
        },
        Object {
          "node": Object {
            "createdBy": "71",
            "isPrivate": false,
            "metaData": Object {
              "description": "Consequatur facilis",
              "externalLinks": null,
            },
            "mods": Array [
              "Martha",
              "Tom",
            ],
            "name": "Voluptas dolor",
            "owner": "71",
            "updatedBy": "71",
            "vip": "69",
          },
        },
        Object {
          "node": Object {
            "createdBy": "37",
            "isPrivate": true,
            "metaData": null,
            "mods": Array [
              "Ben",
              "Mark",
              "Jane",
            ],
            "name": "Quo ut rerum",
            "owner": "37",
            "updatedBy": "37",
            "vip": "7",
          },
        },
        Object {
          "node": Object {
            "createdBy": "84",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Sed assumenda repellendus",
            "owner": "84",
            "updatedBy": "84",
            "vip": "16",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCI1MCJdXX0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCIyIl1dfQ==",
      },
      "resultCount": 9,
      "totalCount": 9,
    },
  },
}
`;

exports[`list filter variants $not_contains 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "59",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Illo sit quia",
            "owner": "59",
            "updatedBy": "59",
            "vip": "21",
          },
        },
        Object {
          "node": Object {
            "createdBy": "71",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Sit aut",
            "owner": "71",
            "updatedBy": "71",
            "vip": "73",
          },
        },
        Object {
          "node": Object {
            "createdBy": "84",
            "isPrivate": false,
            "metaData": null,
            "mods": Array [
              "John",
              "Tom",
              "Jane",
            ],
            "name": "Suscipit aut cum",
            "owner": "84",
            "updatedBy": "84",
            "vip": "89",
          },
        },
        Object {
          "node": Object {
            "createdBy": "26",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Id cum",
            "owner": "26",
            "updatedBy": "26",
            "vip": "26",
          },
        },
        Object {
          "node": Object {
            "createdBy": "60",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Sunt nobis",
            "owner": "60",
            "updatedBy": "60",
            "vip": "72",
          },
        },
        Object {
          "node": Object {
            "createdBy": "10",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Sunt quo",
            "owner": "10",
            "updatedBy": "10",
            "vip": "59",
          },
        },
        Object {
          "node": Object {
            "createdBy": "14",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Mollitia qui",
            "owner": "14",
            "updatedBy": "14",
            "vip": "45",
          },
        },
        Object {
          "node": Object {
            "createdBy": "20",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Culpa facilis",
            "owner": "20",
            "updatedBy": "20",
            "vip": "15",
          },
        },
        Object {
          "node": Object {
            "createdBy": "47",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Suscipit quas",
            "owner": "47",
            "updatedBy": "47",
            "vip": "96",
          },
        },
        Object {
          "node": Object {
            "createdBy": "71",
            "isPrivate": false,
            "metaData": Object {
              "description": "Consequatur facilis",
              "externalLinks": null,
            },
            "mods": Array [
              "Martha",
              "Tom",
            ],
            "name": "Voluptas dolor",
            "owner": "71",
            "updatedBy": "71",
            "vip": "69",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCIzNCJdXX0=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCI4Il1dfQ==",
      },
      "resultCount": 10,
      "totalCount": 12,
    },
  },
}
`;

exports[`list filter variants $not_ends_with 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "46",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Et eum",
            "owner": "46",
            "updatedBy": "46",
            "vip": "62",
          },
        },
        Object {
          "node": Object {
            "createdBy": "79",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Occaecati adipisci vel",
            "owner": "79",
            "updatedBy": "79",
            "vip": "50",
          },
        },
        Object {
          "node": Object {
            "createdBy": "42",
            "isPrivate": false,
            "metaData": Object {
              "description": "Fuga facilis",
              "externalLinks": null,
            },
            "mods": Array [
              "Jane",
              "Martha",
              "Tom",
            ],
            "name": "Delectus qui maxime",
            "owner": "42",
            "updatedBy": "42",
            "vip": "10",
          },
        },
        Object {
          "node": Object {
            "createdBy": "72",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Vel ullam",
            "owner": "72",
            "updatedBy": "72",
            "vip": "9",
          },
        },
        Object {
          "node": Object {
            "createdBy": "59",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Illo sit quia",
            "owner": "59",
            "updatedBy": "59",
            "vip": "21",
          },
        },
        Object {
          "node": Object {
            "createdBy": "52",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Veritatis nihil cum",
            "owner": "52",
            "updatedBy": "52",
            "vip": "61",
          },
        },
        Object {
          "node": Object {
            "createdBy": "81",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Aut incidunt consequatur",
            "owner": "81",
            "updatedBy": "81",
            "vip": "12",
          },
        },
        Object {
          "node": Object {
            "createdBy": "23",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Tenetur porro",
            "owner": "23",
            "updatedBy": "23",
            "vip": "83",
          },
        },
        Object {
          "node": Object {
            "createdBy": "84",
            "isPrivate": false,
            "metaData": null,
            "mods": Array [
              "John",
              "Tom",
              "Jane",
            ],
            "name": "Suscipit aut cum",
            "owner": "84",
            "updatedBy": "84",
            "vip": "89",
          },
        },
        Object {
          "node": Object {
            "createdBy": "26",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Id cum",
            "owner": "26",
            "updatedBy": "26",
            "vip": "26",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCIxNCJdXX0=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCIyIl1dfQ==",
      },
      "resultCount": 10,
      "totalCount": 43,
    },
  },
}
`;

exports[`list filter variants $not_in 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "46",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Et eum",
            "owner": "46",
            "updatedBy": "46",
            "vip": "62",
          },
        },
        Object {
          "node": Object {
            "createdBy": "55",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Cumque impedit est",
            "owner": "55",
            "updatedBy": "55",
            "vip": "4",
          },
        },
        Object {
          "node": Object {
            "createdBy": "72",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Vel ullam",
            "owner": "72",
            "updatedBy": "72",
            "vip": "9",
          },
        },
        Object {
          "node": Object {
            "createdBy": "59",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Illo sit quia",
            "owner": "59",
            "updatedBy": "59",
            "vip": "21",
          },
        },
        Object {
          "node": Object {
            "createdBy": "52",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Veritatis nihil cum",
            "owner": "52",
            "updatedBy": "52",
            "vip": "61",
          },
        },
        Object {
          "node": Object {
            "createdBy": "71",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Sit aut",
            "owner": "71",
            "updatedBy": "71",
            "vip": "73",
          },
        },
        Object {
          "node": Object {
            "createdBy": "81",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Aut incidunt consequatur",
            "owner": "81",
            "updatedBy": "81",
            "vip": "12",
          },
        },
        Object {
          "node": Object {
            "createdBy": "23",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Tenetur porro",
            "owner": "23",
            "updatedBy": "23",
            "vip": "83",
          },
        },
        Object {
          "node": Object {
            "createdBy": "84",
            "isPrivate": false,
            "metaData": null,
            "mods": Array [
              "John",
              "Tom",
              "Jane",
            ],
            "name": "Suscipit aut cum",
            "owner": "84",
            "updatedBy": "84",
            "vip": "89",
          },
        },
        Object {
          "node": Object {
            "createdBy": "26",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Id cum",
            "owner": "26",
            "updatedBy": "26",
            "vip": "26",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCIxNCJdXX0=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCIyIl1dfQ==",
      },
      "resultCount": 10,
      "totalCount": 43,
    },
  },
}
`;

exports[`list filter variants $not_starts_with 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "37",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Reiciendis quaerat",
            "owner": "37",
            "updatedBy": "37",
            "vip": "103",
          },
        },
        Object {
          "node": Object {
            "createdBy": "46",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Et eum",
            "owner": "46",
            "updatedBy": "46",
            "vip": "62",
          },
        },
        Object {
          "node": Object {
            "createdBy": "79",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Occaecati adipisci vel",
            "owner": "79",
            "updatedBy": "79",
            "vip": "50",
          },
        },
        Object {
          "node": Object {
            "createdBy": "42",
            "isPrivate": false,
            "metaData": Object {
              "description": "Fuga facilis",
              "externalLinks": null,
            },
            "mods": Array [
              "Jane",
              "Martha",
              "Tom",
            ],
            "name": "Delectus qui maxime",
            "owner": "42",
            "updatedBy": "42",
            "vip": "10",
          },
        },
        Object {
          "node": Object {
            "createdBy": "55",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Cumque impedit est",
            "owner": "55",
            "updatedBy": "55",
            "vip": "4",
          },
        },
        Object {
          "node": Object {
            "createdBy": "42",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Ut et",
            "owner": "42",
            "updatedBy": "42",
            "vip": "102",
          },
        },
        Object {
          "node": Object {
            "createdBy": "59",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Illo sit quia",
            "owner": "59",
            "updatedBy": "59",
            "vip": "21",
          },
        },
        Object {
          "node": Object {
            "createdBy": "71",
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Sit aut",
            "owner": "71",
            "updatedBy": "71",
            "vip": "73",
          },
        },
        Object {
          "node": Object {
            "createdBy": "81",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Aut incidunt consequatur",
            "owner": "81",
            "updatedBy": "81",
            "vip": "12",
          },
        },
        Object {
          "node": Object {
            "createdBy": "23",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Tenetur porro",
            "owner": "23",
            "updatedBy": "23",
            "vip": "83",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCIxMiJdXX0=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCIxIl1dfQ==",
      },
      "resultCount": 10,
      "totalCount": 48,
    },
  },
}
`;

exports[`list filter variants $starts_with + $not_ends_with 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "84",
            "isPrivate": false,
            "metaData": null,
            "mods": Array [
              "John",
              "Tom",
              "Jane",
            ],
            "name": "Suscipit aut cum",
            "owner": "84",
            "updatedBy": "84",
            "vip": "89",
          },
        },
        Object {
          "node": Object {
            "createdBy": "10",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Sunt quo",
            "owner": "10",
            "updatedBy": "10",
            "vip": "59",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCIyMCJdXX0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCIxMyJdXX0=",
      },
      "resultCount": 2,
      "totalCount": 2,
    },
  },
}
`;

exports[`list filter variants $starts_with 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdBy": "73",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Est adipisci inventore",
            "owner": "73",
            "updatedBy": "73",
            "vip": "14",
          },
        },
        Object {
          "node": Object {
            "createdBy": "24",
            "isPrivate": false,
            "metaData": null,
            "mods": null,
            "name": "Est et",
            "owner": "24",
            "updatedBy": "24",
            "vip": "55",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCIxNyJdXX0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCIxNiJdXX0=",
      },
      "resultCount": 2,
      "totalCount": 2,
    },
  },
}
`;

exports[`list filter variants equals (null) 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [],
      "pageInfo": Object {
        "endCursor": null,
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": null,
      },
      "resultCount": 0,
      "totalCount": 0,
    },
  },
}
`;

exports[`list filter with invalid attributes (reject) 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Field "someAttributes" is not defined by type "BoardFilter".],
  ],
}
`;

exports[`list filter with logical operators AND AND + last 1`] = `
Object {
  "data": Object {
    "allBoardMembers": Object {
      "edges": Array [
        Object {
          "node": Object {
            "board": "32",
            "id": "241",
            "invitee": "68",
            "inviter": "78",
            "state": "accepted",
          },
        },
        Object {
          "node": Object {
            "board": "39",
            "id": "232",
            "invitee": "38",
            "inviter": "61",
            "state": "accepted",
          },
        },
        Object {
          "node": Object {
            "board": "32",
            "id": "220",
            "invitee": "21",
            "inviter": "78",
            "state": "accepted",
          },
        },
        Object {
          "node": Object {
            "board": "38",
            "id": "104",
            "invitee": "61",
            "inviter": "61",
            "state": "joined",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": true,
      },
      "resultCount": 4,
      "totalCount": 7,
    },
  },
}
`;

exports[`list filter with logical operators AND AND + offset 1`] = `
Object {
  "data": Object {
    "allBoardMembers": Object {
      "edges": Array [
        Object {
          "node": Object {
            "board": "39",
            "id": "232",
            "invitee": "38",
            "inviter": "61",
            "state": "accepted",
          },
        },
        Object {
          "node": Object {
            "board": "32",
            "id": "220",
            "invitee": "21",
            "inviter": "78",
            "state": "accepted",
          },
        },
        Object {
          "node": Object {
            "board": "38",
            "id": "104",
            "invitee": "61",
            "inviter": "61",
            "state": "joined",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": false,
      },
      "resultCount": 3,
      "totalCount": 7,
    },
  },
}
`;

exports[`list filter with logical operators AND AND + orderBy 1`] = `
Object {
  "data": Object {
    "allBoardMembers": Object {
      "edges": Array [
        Object {
          "node": Object {
            "board": "32",
            "id": "265",
            "invitee": "36",
            "inviter": "78",
            "state": "accepted",
          },
        },
        Object {
          "node": Object {
            "board": "32",
            "id": "247",
            "invitee": "107",
            "inviter": "78",
            "state": "accepted",
          },
        },
        Object {
          "node": Object {
            "board": "32",
            "id": "242",
            "invitee": "61",
            "inviter": "78",
            "state": "accepted",
          },
        },
        Object {
          "node": Object {
            "board": "32",
            "id": "241",
            "invitee": "68",
            "inviter": "78",
            "state": "accepted",
          },
        },
        Object {
          "node": Object {
            "board": "39",
            "id": "232",
            "invitee": "38",
            "inviter": "61",
            "state": "accepted",
          },
        },
        Object {
          "node": Object {
            "board": "32",
            "id": "220",
            "invitee": "21",
            "inviter": "78",
            "state": "accepted",
          },
        },
        Object {
          "node": Object {
            "board": "38",
            "id": "104",
            "invitee": "61",
            "inviter": "61",
            "state": "joined",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": false,
      },
      "resultCount": 7,
      "totalCount": 7,
    },
  },
}
`;

exports[`list filter with logical operators OR OR + last 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Joe",
            "id": "37",
            "lastname": "Quitzon",
            "username": "joe656",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Weston",
            "id": "21",
            "lastname": "Borer",
            "username": "weston422",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Dana",
            "id": "13",
            "lastname": "Thiel",
            "username": "dana768",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": true,
      },
      "resultCount": 3,
      "totalCount": 4,
    },
  },
}
`;

exports[`list filter with logical operators OR OR + offset 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Joe",
            "id": "37",
            "lastname": "Quitzon",
            "username": "joe656",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Weston",
            "id": "21",
            "lastname": "Borer",
            "username": "weston422",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Dana",
            "id": "13",
            "lastname": "Thiel",
            "username": "dana768",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": false,
      },
      "resultCount": 3,
      "totalCount": 4,
    },
  },
}
`;

exports[`list filter with logical operators OR OR + orderBy 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Joel",
            "id": "95",
            "lastname": "Lakin",
            "username": "joel356",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Joe",
            "id": "37",
            "lastname": "Quitzon",
            "username": "joe656",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Weston",
            "id": "21",
            "lastname": "Borer",
            "username": "weston422",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Dana",
            "id": "13",
            "lastname": "Thiel",
            "username": "dana768",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": false,
      },
      "resultCount": 4,
      "totalCount": 4,
    },
  },
}
`;

exports[`list filter with logical operators filter with nested logical operators AND + OR 1`] = `
Object {
  "data": Object {
    "allBoardMembers": Object {
      "edges": Array [
        Object {
          "node": Object {
            "board": "32",
            "id": "220",
            "invitee": "21",
            "inviter": "78",
            "state": "accepted",
          },
        },
        Object {
          "node": Object {
            "board": "32",
            "id": "242",
            "invitee": "61",
            "inviter": "78",
            "state": "accepted",
          },
        },
        Object {
          "node": Object {
            "board": "32",
            "id": "247",
            "invitee": "107",
            "inviter": "78",
            "state": "accepted",
          },
        },
        Object {
          "node": Object {
            "board": "38",
            "id": "104",
            "invitee": "61",
            "inviter": "61",
            "state": "joined",
          },
        },
        Object {
          "node": Object {
            "board": "39",
            "id": "232",
            "invitee": "38",
            "inviter": "61",
            "state": "accepted",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": false,
      },
      "resultCount": 5,
      "totalCount": 5,
    },
  },
}
`;

exports[`list filter with mutliple attributes 1`] = `
Object {
  "data": Object {
    "allBoards": Object {
      "edges": Array [
        Object {
          "node": Object {
            "isPrivate": true,
            "metaData": null,
            "mods": null,
            "name": "Veritatis nihil cum",
            "owner": "52",
            "vip": "61",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJCb2FyZCI6W1siaWQiLCI5Il1dfQ==",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "eyJCb2FyZCI6W1siaWQiLCI5Il1dfQ==",
      },
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`list filter with no results 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [],
      "pageInfo": Object {
        "endCursor": null,
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": null,
      },
      "resultCount": 0,
      "totalCount": 0,
    },
  },
}
`;

exports[`list multi-key orderBy + first + offset 1`] = `
Object {
  "data": Object {
    "allBoardMembers": Object {
      "edges": Array [
        Object {
          "node": Object {
            "board": "2",
            "id": "214",
            "invitee": "92",
            "inviter": "46",
            "state": "accepted",
          },
        },
        Object {
          "node": Object {
            "board": "2",
            "id": "281",
            "invitee": "40",
            "inviter": "46",
            "state": "invited",
          },
        },
        Object {
          "node": Object {
            "board": "3",
            "id": "207",
            "invitee": "61",
            "inviter": "79",
            "state": "invited",
          },
        },
        Object {
          "node": Object {
            "board": "3",
            "id": "262",
            "invitee": "38",
            "inviter": "79",
            "state": "invited",
          },
        },
        Object {
          "node": Object {
            "board": "3",
            "id": "264",
            "invitee": "24",
            "inviter": "79",
            "state": "invited",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": true,
        "hasPreviousPage": false,
      },
      "resultCount": 5,
      "totalCount": 300,
    },
  },
}
`;

exports[`list orderBy + first + offset 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Jeremy",
            "id": "6",
            "lastname": "Larkin",
            "username": "jeremy386",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Autumn",
            "id": "7",
            "lastname": "Ullrich",
            "username": "autumn520",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Edward",
            "id": "8",
            "lastname": "Dach",
            "username": "edward969",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjgiXV19",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjYiXV19",
      },
      "resultCount": 3,
      "totalCount": 110,
    },
  },
}
`;

exports[`list orderBy + first 0 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [],
      "pageInfo": Object {
        "endCursor": null,
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": null,
      },
      "resultCount": 0,
      "totalCount": 110,
    },
  },
}
`;

exports[`list orderBy + first 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Annabel",
            "id": "1",
            "lastname": "Bergstrom",
            "username": "annabel711",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Anya",
            "id": "2",
            "lastname": "Conn",
            "username": "anya543",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Fleta",
            "id": "3",
            "lastname": "Williamson",
            "username": "fleta342",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjMiXV19",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjEiXV19",
      },
      "resultCount": 3,
      "totalCount": 110,
    },
  },
}
`;

exports[`list orderBy + last + offset 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Ella",
            "id": "103",
            "lastname": "Roberts",
            "username": "ella377",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Joe",
            "id": "104",
            "lastname": "Ratke",
            "username": "joe154",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Brandi",
            "id": "105",
            "lastname": "Grimes",
            "username": "brandi646",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjEwNSJdXX0=",
        "hasNextPage": false,
        "hasPreviousPage": true,
        "startCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjEwMyJdXX0=",
      },
      "resultCount": 3,
      "totalCount": 110,
    },
  },
}
`;

exports[`list orderBy + last 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Tianna",
            "id": "108",
            "lastname": "Kulas",
            "username": "tianna226",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Muriel",
            "id": "109",
            "lastname": "Howe",
            "username": "muriel707",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Krystel",
            "id": "110",
            "lastname": "Bauch",
            "username": "krystel170",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjExMCJdXX0=",
        "hasNextPage": false,
        "hasPreviousPage": true,
        "startCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjEwOCJdXX0=",
      },
      "resultCount": 3,
      "totalCount": 110,
    },
  },
}
`;

exports[`list orderBy + offset 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Jeremy",
            "id": "6",
            "lastname": "Larkin",
            "username": "jeremy386",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Autumn",
            "id": "7",
            "lastname": "Ullrich",
            "username": "autumn520",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Edward",
            "id": "8",
            "lastname": "Dach",
            "username": "edward969",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Omari",
            "id": "9",
            "lastname": "White",
            "username": "omari409",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Leon",
            "id": "10",
            "lastname": "Smitham",
            "username": "leon807",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Hazel",
            "id": "11",
            "lastname": "King",
            "username": "hazel528",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Emmet",
            "id": "12",
            "lastname": "Boyle",
            "username": "emmet741",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Dana",
            "id": "13",
            "lastname": "Thiel",
            "username": "dana768",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Clark",
            "id": "14",
            "lastname": "Abshire",
            "username": "clark218",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Athena",
            "id": "15",
            "lastname": "Stamm",
            "username": "athena557",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjE1Il1dfQ==",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjYiXV19",
      },
      "resultCount": 10,
      "totalCount": 110,
    },
  },
}
`;

exports[`list orderBy 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Annabel",
            "id": "1",
            "lastname": "Bergstrom",
            "username": "annabel711",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Anya",
            "id": "2",
            "lastname": "Conn",
            "username": "anya543",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Fleta",
            "id": "3",
            "lastname": "Williamson",
            "username": "fleta342",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Victor",
            "id": "4",
            "lastname": "Keeling",
            "username": "victor821",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Griffin",
            "id": "5",
            "lastname": "Frami",
            "username": "griffin807",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Jeremy",
            "id": "6",
            "lastname": "Larkin",
            "username": "jeremy386",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Autumn",
            "id": "7",
            "lastname": "Ullrich",
            "username": "autumn520",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Edward",
            "id": "8",
            "lastname": "Dach",
            "username": "edward969",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Omari",
            "id": "9",
            "lastname": "White",
            "username": "omari409",
          },
        },
        Object {
          "node": Object {
            "confirmedAt": null,
            "firstname": "Leon",
            "id": "10",
            "lastname": "Smitham",
            "username": "leon807",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjEwIl1dfQ==",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "eyJQcm9maWxlIjpbWyJpZCIsIjEiXV19",
      },
      "resultCount": 10,
      "totalCount": 110,
    },
  },
}
`;

exports[`list reverse connection + first 1`] = `
Object {
  "data": Object {
    "profileById": Object {
      "boardMembersByInviter": Object {
        "edges": Array [
          Object {
            "node": Object {
              "board": "41",
              "id": "80",
              "invitee": "60",
              "inviter": "60",
              "state": "joined",
            },
          },
        ],
        "pageInfo": Object {
          "hasNextPage": true,
          "hasPreviousPage": false,
        },
        "resultCount": 1,
        "totalCount": 2,
      },
      "id": "60",
    },
  },
}
`;

exports[`list reverse connection 1`] = `
Object {
  "data": Object {
    "profileById": Object {
      "boardMembersByInviter": Object {
        "edges": Array [
          Object {
            "node": Object {
              "board": "41",
              "id": "80",
              "invitee": "60",
              "inviter": "60",
              "state": "joined",
            },
          },
          Object {
            "node": Object {
              "board": "47",
              "id": "109",
              "invitee": "60",
              "inviter": "60",
              "state": "joined",
            },
          },
        ],
        "pageInfo": Object {
          "hasNextPage": false,
          "hasPreviousPage": false,
        },
        "resultCount": 2,
        "totalCount": 2,
      },
      "id": "60",
    },
  },
}
`;

exports[`list should read data via connector 1`] = `
Object {
  "data": Array [
    Object {
      "confirmedAt": null,
      "firstname": "Krystel",
      "id": "110",
      "lastname": "Bauch",
      "password": "e97188c43aaf749ffa43df9286c35eb150174bb7bfe69dc6df7689fb782b976a",
      "username": "krystel170",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Muriel",
      "id": "109",
      "lastname": "Howe",
      "password": "bf94deb712f9040ba1effa106091e0a1ca330f4b1f311e44b021e955ad203100",
      "username": "muriel707",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Tianna",
      "id": "108",
      "lastname": "Kulas",
      "password": "b00046da5a1751e46b557fab4edb5d91e13c44c8a0205fc2d89275d422df49ad",
      "username": "tianna226",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Leanna",
      "id": "107",
      "lastname": "Leuschke",
      "password": "f735b74ca8ad9b0f7ae8190fa71acfa15f6a5a4f5b7a8ac2ef790c59eb185e3c",
      "username": "leanna128",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Stan",
      "id": "106",
      "lastname": "VonRueden",
      "password": "507b91e6b0ae6ea80e7c0d1642304ce8cd713527d36db297fef1504598ecd79c",
      "username": "stan321",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Brandi",
      "id": "105",
      "lastname": "Grimes",
      "password": "bac53a2cdcbf0a3d8fc1b1e573e81699382ed1080821d20ec1b47c7dddd02fa5",
      "username": "brandi646",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Joe",
      "id": "104",
      "lastname": "Ratke",
      "password": "8fed8061e1e33d96169b9026605172a8fe21eb1ce51756187195be0330536fb7",
      "username": "joe154",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Ella",
      "id": "103",
      "lastname": "Roberts",
      "password": "f056b8cae37dc3ed60ee52da9a2951f8a6c531fe3222a3ad6835dbdd905c7d2a",
      "username": "ella377",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Garfield",
      "id": "102",
      "lastname": "Langosh",
      "password": "e97188c43aaf749ffa43df9286c35eb150174bb7bfe69dc6df7689fb782b976a",
      "username": "garfield347",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Isidro",
      "id": "101",
      "lastname": "Heaney",
      "password": "e44591879052d99a7509f498e6e65985123b34c9b69ff6eafacb9b05f9deb1eb",
      "username": "isidro418",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`list should utilize data loader 1`] = `
Object {
  "_type_": "profile",
  "confirmedAt": null,
  "firstname": "Griffin",
  "id": "5",
  "lastname": "Frami",
  "password": "7679f40138809eb3e012b29a46160f797b3afd72227099bde320fbc7e725e59d",
  "username": "griffin807",
}
`;
